dev 8517 fix mobile layout issue

--- a/src/_scss/pages/homepageUpdate/homepageUpdate.scss
+++ b/src/_scss/pages/homepageUpdate/homepageUpdate.scss
@@ -36,9 +36,12 @@
       .grid-content {
         button {
           border-radius: 4px;
-          @media (max-width: $tablet-screen) {
+          @media (max-width: $medium-screen) {
             width: 100%;
           }
+        }
+        button.feature-carousel-content__arrow {
+          width: fit-content;
         }
         .section-heading-title-wrapper  {
           width: 100%;
@@ -58,11 +61,6 @@
         p {
           font-size: 20px;
           line-height: 1.5;
-        }
-        button {
-          @media (max-width: $medium-screen) {
-            width: 100%;
-          }
         }
         .homepage-spending-explorer {
           .homepage-spending-explorer__img-wrapper {
